src/app/components/form/form.component.css
.hpe-question {
    font-size: 35px;
}
.radio-label-text {
    font-weight: 600;
}
.form-text-field {
    padding-left: 42px;
    padding-top: 15px;
}
.input-field {
    font-size:20px;
    font-weight: 600;
    line-height: 18px;
}
.checkbox-heading {
    padding-bottom: 38px;
}
.checkbox-option-label {
    font-weight: 600;
    /* font-size: 20px; */
    /* line-height: 18px; */
}
input[type=checkbox] + label:before {
    margin-right: 20px;
}

.right-nav {
    display: flex;
    height: 100%;
}

.right-nav-button-wrapper {
    width: 42px;
    background-color: #2AD2C9;
}

.right-nav-accordion {
    width:0px;
    /* overflow: hidden; */
}

.side-nav-icon {
    width: 11px;
    height: 19px;
    cursor: pointer;
}
.prev-side-nav-icon {
    transform: rotate(180deg);
}

.right-nav-accordion-transition {
    width: 400px;
    transition: all .3s ease-in-out;
}
.remove-right-nav-accordion-transition {
    width: 0px;
    transition: all .3s ease-in-out;
}

.nav-button-wrapper {
    display: flex;
    justify-content: center;
    padding-top:17px;;
}
.check-and-radio-heading {
    padding-bottom: 38px;
}
.disable{
    pointer-events: none;
}

.font-regular{
    font-weight: 400;
}

.changeColor{
    /* background-color: #ffffff; */
}

.checkbox-helpfield-section{
    padding-left:45px;
}
.disabled-nav{
    background-color: #468c98;
}

.close-add-details {
    display: flex;
    justify-content: flex-end;
    margin-bottom: 15px;
}

.confirm-text{
    font-size: 24px;
    padding-bottom: 20px;
}

.confirm-radio-text{
    font-size: 20px;    
}

.pt-10{
    padding-top: 10px;
}

.pb-30{
    padding-bottom: 30px;
}
.remove-details-data-icon {
    position: absolute;
    top: 15px;
    right: 15px;
}
.add-details-section {
    position: relative;
}

